fix layout issues on metadata page

--- a/src/less/metadata.less
+++ b/src/less/metadata.less
@@ -81,9 +81,9 @@
     border-bottom: @section-border;
     > li.active {
       > a , > a:focus {
-        background-color: @brand-primary;
-        color: contrast(@brand-primary);
-        border-color: @brand-primary;
+        background-color: @section-header-bg;
+        color: contrast(@section-header-bg);
+        border-color: @section-header-bg;
         &.waves-effect .waves-ripple {
           background: rgba(255, 255, 255, 0.4);
           @gradient: rgba(255, 255, 255, 0.2) 0, rgba(255, 255, 255, .3) 40%, rgba(255, 255, 255, .4) 50%, rgba(255, 255, 255, .5) 60%, rgba(255, 255, 255, 0) 70%;
@@ -180,7 +180,6 @@
 
 .file_box {
   .header {
-    border-bottom: 1px solid @panel-default-border;
     font-size: @section-font-size;
     margin-left: 0;
     margin-right: 0;
@@ -189,12 +188,13 @@
       margin-right: -15px;
       .title {
         .section-style ();
+        float: left;
         &:after {
           margin: 0;
         }
 
         .btn {
-          color: contrast(@brand-primary);
+          color: contrast(@section-header-bg);
           padding: 0;
           margin: 0;
           border-radius: 0;
@@ -209,7 +209,7 @@
         background: none;
         border: 0;
         .box-shadow (~"none");
-        color: @text-color;
+        color: contrast(@section-header-bg);
         font-size: @section-font-size;
         margin: 0;
         padding: 0;
@@ -217,13 +217,29 @@
 
       .file_urn {
         font-size: 60%;
+        > a {
+          color: contrast(@section-header-bg);
+        }
+      }
+
+      .options .btn {
+        border: none;
+        margin-right: 0;
+        background: none;
+        text-shadow: none;
+        box-shadow: none;
+        padding: 5px 10px;
+        font-size: 12px;
+        line-height: 1.5
       }
     }
   }
 
   .file_box_files {
-    .table > tbody > tr > td {
-      border-top: 0;
+    .table > tbody {
+      > tr > td {
+        border-top: 0;
+      }
     }
 
     .file_name {
