--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -45,8 +45,8 @@
       margin: 0;
       padding: 0;
       .panel-title {
-        background-color: @brand-primary;
-        color: contrast(@brand-primary);
+        background-color: @section-header-bg;
+        color: contrast(@section-header-bg);
         font-size: @font-size;
         width: 45%;
         line-height: 1.2em;
@@ -84,8 +84,8 @@
 // DBT - section
 .section-style () {
   @section-padding: 5px;
-  background-color: @brand-primary;
-  color: contrast(@brand-primary);
+  background-color: @section-header-bg;
+  color: contrast(@section-header-bg);
   padding: @section-padding;
   font-size: @section-font-size;
   width: 45%;
