--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -25,8 +25,9 @@
 // Sections (Metadata)
 // ---------------------------------------------------
 
+@section-header-bg: @brand-primary;
 @section-font-size: 16px;
-@section-border: 2px solid @brand-primary;
+@section-border: 2px solid @section-header-bg;
 
 // ---------------------------------------------------
 // Inputs and Buttons
